--- a/ankaa_beacon/lib/ankaa_web/components/layouts/root.html.heex
+++ b/ankaa_beacon/lib/ankaa_web/components/layouts/root.html.heex
@@ -1,75 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" class="[scrollbar-gutter:stable]">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="csrf-token" content={get_csrf_token()} />
-    <.live_title suffix=" · Ankaa">
-      {assigns[:page_title]}
-    </.live_title>
-    <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
-    <link rel="icon" type="image/svg+xml" href={~p"/images/favicon.svg"} />
-    <link rel="apple-touch-icon" href={~p"/images/favicon.svg"} />
-    <script src="https://app.termly.io/resource-blocker/fb153b58-7e6d-4ba8-bff7-5168e65fe968?autoBlock=on"></script>
-    <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
-    </script>
-  </head>
-  <body class="bg-gray-50">
-    <.disclaimer_banner />
-    <header class="bg-white shadow">
-      <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-        <div class="flex h-16 justify-between">
-          <div class="flex">      
-            <div class="flex shrink-0 items-center">
-              <img src={"/images/favicon.svg"} alt="Ankaa" class="h-8 w-8 mr-2" />
-              <%= cond do %>
-                <% !@current_user -> %>
-                  <.link href={~p"/"} class="text-xl font-bold text-gray-900">Safehemo</.link>
-                <% !@current_user.role && !@current_user.patient -> %>
-                  <.link href={~p"/register"} class="text-xl font-bold text-gray-900">Safehemo</.link>
-                <% @current_user.role || @current_user.patient -> %>
-                  <.link href={~p"/portal"} class="text-xl font-bold text-gray-900">Safehemo</.link>
-              <% end %>
-            </div>
-          </div>
-          <div class="flex items-center">
-            <%= if @current_user do %>
-              <div class="flex items-center space-x-4">
-                <span class="text-sm text-gray-700">{@current_user.email}</span>
-                <.link
-                  href={~p"/users/settings"}
-                  class="text-sm font-medium text-gray-700 hover:text-gray-900"
-                >
-                  Settings
-                </.link>
-                <.link
-                  href={~p"/users/logout"}
-                  method="delete"
-                  class="text-sm font-medium text-gray-700 hover:text-gray-900"
-                >
-                  Log out
-                </.link>
-              </div>
-            <% else %>
-              <div class="flex items-center space-x-4">
-                <.link
-                  href={~p"/users/register"}
-                  class="text-sm font-medium text-gray-700 hover:text-gray-900"
-                >
-                  Register
-                </.link>
-                <.link
-                  href={~p"/users/login"}
-                  class="text-sm font-medium text-gray-700 hover:text-gray-900"
-                >
-                  Log in
-                </.link>
-              </div>
-            <% end %>
-          </div>
-        </div>
-      </div>
-    </header>
-    {@inner_content}
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="csrf-token" content={get_csrf_token()} />
+  <.live_title suffix=" · Safehemo">
+    {assigns[:page_title] || "Home"}
+  </.live_title>
+  <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
+  <link rel="icon" type="image/svg+xml" href={~p"/images/favicon.svg"} />
+  <link rel="apple-touch-icon" href={~p"/images/favicon.svg"} />
+  <script src="https://app.termly.io/resource-blocker/fb153b58-7e6d-4ba8-bff7-5168e65fe968?autoBlock=on"></script>
+  <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}></script>
+</head>
+
+<body class="bg-gray-50 h-full antialiased selection:bg-purple-100 selection:text-purple-900">
+  <.disclaimer_banner />
+
+  {@inner_content}
+</body>
+
 </html>
